toc changes and proof reading

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -10,7 +10,6 @@ number-sections: true
 categories: chapter
 title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 ---
-
 -   [The Use of Gameplay Design Patterns "It's like a project in itself,
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
     -   [Research Questions - March
@@ -23,8 +22,8 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [GDPs facilitate the use of wider funds of knowledge /
-            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
+        -   [GDPs facilitate the use of wider funds of knowledge and
+            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
     -   [GDPs used in the process of guided participation (Target
@@ -34,16 +33,10 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
             navigation, acting as a framework for code examples and
             step-by-step tutorials
             (600)](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials-600)
-        -   [GDPs used to scaffold ideation and organisation processes
-            (800)](#gdps-used-to-scaffold-ideation-and-organisation-processes-800)
-            -   [Knowledge of game design patterns used to stimulate and
-                communicate new
-                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas)
-            -   [The use of GDPs to encourage intuitive and visual
-                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping)
-        -   [GDPs aiding the process of organisation and division of
-            labour
-            (1400)](#gdps-aiding-the-process-of-organisation-and-division-of-labour-1400)
+        -   [GDPs used to scaffold ideation and prioritisation processes
+            (800)](#gdps-used-to-scaffold-ideation-and-prioritisation-processes-800)
+        -   [GDPs aiding the process of division of labour
+            (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
         -   [Discussion on division of labour in the video
             data](#discussion-on-division-of-labour-in-the-video-data)
         -   [The role of GDP used in emerging technical processes
@@ -54,26 +47,20 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [Discussion](#discussion)
         -   [Discussion of findings in relation to CHAT conceptions of
             abstraction](#discussion-of-findings-in-relation-to-chat-conceptions-of-abstraction)
-        -   [Discussion of findings in relation to Computational
-            Thinking and
-            abstraction](#discussion-of-findings-in-relation-to-computational-thinking-and-abstraction)
-            -   [Design patterns as a intermediate-level, pedagogical
-                framework compared to computational
-                thinking](#design-patterns-as-a-intermediate-level-pedagogical-framework-compared-to-computational-thinking)
-        -   [Implications and beginnings of suggestions for
-            practitioners to support inclusive pedagogical approach
-            -](#implications-and-beginnings-of-suggestions-for-practitioners-to-support-inclusive-pedagogical-approach--)
-            -   [Table of GDP use with supporting
-                evidence](#table-of-gdp-use-with-supporting-evidence)
-        -   [Simple table of uses](#simple-table-of-uses)
-    -   [Chapter Conclusion](#chapter-conclusion)
+        -   [Design patterns as a intermediate-level, pedagogical
+            framework compared to computational
+            thinking](#design-patterns-as-a-intermediate-level-pedagogical-framework-compared-to-computational-thinking)
+        -   [Implications for
+            practitioners](#implications-for-practitioners)
+            -   [Table of varied GDP use with supporting
+                evidence](#table-of-varied-gdp-use-with-supporting-evidence)
+    -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
             PARTICIPATION](#moved-from-guided-participation)
         -   [Future work on abstraction, layers of abstraction GDPs and
             the MDA
             framework](#future-work-on-abstraction-layers-of-abstraction-gdps-and-the-mda-framework)
-
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
@@ -93,7 +80,9 @@ In each section if there are multiple aspects of that then put into headings  - 
 Examine overlap of the cultural uses of GDP, and the next chapter - hand in hand here get an overview of what needs to extracted from the data and where it sits
 
 Also work out what to move to Lit Review - and restructure LT and Methodology based on two chapters near completion. -->
-### Word count
+
+
+<!-- ### Word count
 
 - Actual (Target)
 - Intro - 800 - (500)
@@ -104,7 +93,7 @@ Also work out what to move to Lit Review - and restructure LT and Methodology ba
 - DISCUSSION - 2300 (2000)
 - Conclusion- 400 (500)
 
-500+1000+2500+2500+750+2000+500 = 9750
+500+1000+2500+2500+750+2000+500 = 9750 -->
 
 ## Introduction
 
@@ -367,9 +356,11 @@ This section examines the use of GDPs to facilitate guided participation via int
 <!-- - RECAP DOCUMENTATION TENSIONS HERE WITH FOCUS ON AGENCY
 - ALSO FOCUS ON MY ROLE AS A DESIGNER INTRODUCING DOCUMENTATION AND STRATEGIES (PERHAPS MAPS TOO IN LINE WITH 5TH D) -->
 
-The use of a catalogue of design patterns addresses a tension of participants choice and the need for documentation to support the technical implementation of code structures. However, not all participants used provided instructions and develop diverse ways to access support to implement patterns. At the cultural level of analysis of activity, the previous section outlined that providing a menu of game design patterns enabled participants to select patterns aligned with their personal interests, potentially reducing feelings of alienation from coding or game-making culture. This section also examines how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences on an interpersonal plane of activity.
+The use of a catalogue of design patterns addresses the tension between participants' choice and the need for documentation to support the technical implementation of code structures. However, not all participants used the provided instructions and developed diverse methods to access support for implementing patterns. At the cultural level of activity analysis, the previous section outlined how providing a menu of game design patterns enabled participants to select patterns aligned with their personal interests, potentially reducing feelings of alienation from coding or game-making culture. This section further examines how a curated collection of game patterns, along with supporting documentation, created opportunities and influenced participants' experiences on the interpersonal plane of activity.
 
-The previous chapter explored, from my perspective as a facilitator, the use of a menu of GDPs helped address a the tension between of participant choice the need for supporting materials on code implementation. Vignette 9, shows one of the few short episodes of my addressing the whole group class talk where I outline the webpage listing the menu of patterns _"It’s almost like this is our control panel. (you decide) what do you want to do next and we jump off from there."_. In addition to the use of written documentation as a framework, in P2 I guided supporting student facilitators to ask what patterns they were currently working or had recently completed as a way of provoking informal reflection on project progress. Given this integration of these elements into the learning design from P2 onwards, it would appear natural that participant use the provided framework at least in some ways. Despite this, the evolving use of this documentation, the variations within that use and interpersonal interactions use merit attention due to the diversity, evolution and fundamental importance of use of GDPs at this interpersonal scope.
+The previous chapter explored, from my perspective as a facilitator, how the use of a menu of GDPs helped address the tension between participant choice and the need for supporting materials on code implementation. Vignette 9 shows one of the few short episodes where I addressed the whole class, outlining the webpage listing the menu of patterns: _"It’s almost like this is our control panel. (you decide) what do you want to do next and we jump off from there."_. In addition to using written documentation as a framework, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress. Given the integration of these elements into the learning design from P2 onwards, it would seem natural that participants would use the provided framework, at least in some capacity. Despite this, the evolving use of this documentation, the variations in its use, and the interpersonal interactions surrounding it merit further attention due to the diversity, evolution, and fundamental importance of GDP use at this interpersonal scope.
+
+
 
 <!-- The decision to base supporting resources around a menu of game design patterns was an end product of a mutual evolution. -->
 
@@ -377,9 +368,8 @@ The previous chapter explored, from my perspective as a facilitator, the use of 
 Participants used both  printed resources and where possible direct forms of help between peer participants and any facilitators present.
 other COMMENTs HERE -->
 
-Vignette 2 in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting.   
-
-By way of contrast, Toby in Vignette 1 engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games. (EXPLORED ABOVE?)
+Vignette 2 in this chapter shows the parent Suzanna's use of a step by step tutorial to address the child's objective of implementing chosen GDPs. Olivia is limited in her technical skills but leverages the concept of two GDPs in particular to persist in problem solving using the tutorial and trouble shooting using facilitator help. Given Olivia's limited computer literacy (explored in the Vignette commentary) the idea of the GDP is likely to be from a cultural source, most likely playtesting. By way of contrast, Toby in Vignette 1 engages in lone working, copying a code from code snippet example of the game design pattern which he chose from a graphical menu of patterns. His independence in adding new features using supporting documentation without facilitator support helps him take on a mantle of a mentor inspiring and helping others add the same GDPs to their games.
+(EXPLORED ABOVE?)
 
 OTHER DATA  HERE -
 Examples from the data of participants using GDPs as a framework for organisation and project navigations.
@@ -390,8 +380,6 @@ These varied forms of documentation, and their varied adoption and propagation r
 
 
 <!-- NOTE ARE DIFFERENT APPROACHES BEST EXPLORED HERE OR SOMEWHERE ELSE? -->
-
-
 Key characteristics of structuring support around quick start activities and a subsequent menu of GDPs which align with existing research include:
 
 - supporting the value of informal approaches to learning technology [ITO etc] whilst avoiding the lack of support in P1 where participants called out for more support with technical and organisational processes.
@@ -763,10 +751,9 @@ While I address areas for future research in the conclusion, a proposed benefit 
 <!-- While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects. -->
 
 
-### Discussion of findings in relation to Computational Thinking and  abstraction
 
 
-#### Design patterns as a intermediate-level, pedagogical framework compared to computational thinking
+### Design patterns as a intermediate-level, pedagogical framework compared to computational thinking
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
 
@@ -814,34 +801,32 @@ As previously explored I had a reluctance to shift learners away from the practi
 - Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design. -->
 
 
-
-### Implications and beginnings of suggestions for practitioners to support inclusive pedagogical approach -
+### Implications for practitioners
 <!--
 RETURNING TO WHAT IS FOUND IN THE DATA - A CELEBRATION OF THE CONCRETE - AND UTITILY OF THE MID - LEVEL APPROACH -->
 
-Returning to issues of inclusive approaches to pedagogy, the findings of this chapter resonates with  Papert and Turkle's celebration of the process of concrete tinkering. They also suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially responsive whilst still retaining a unifying pedagogical approach.
+Returning to issues of inclusive approaches to pedagogy, the findings of this chapter resonates with Papert and Turkle's celebration of the process of concrete tinkering. They also suggest that it is potentially augmented, in terms of wider accessibility, with the use of design patterns as a germ cell concept. This approach is flexible and potentially responsive whilst still retaining a unifying pedagogical approach.
 
 In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the next. Any other analysis on the part of the participant can wait until the process becomes more familiar.
 
 This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
 
 
-#### Table of GDP use with supporting evidence
+#### Table of varied GDP use with supporting evidence
 
-The use of GDPs by participants on now presented in summary via in table form.
+The following table outlines the principle different uses of GDP in the data analysed. The next to last column lists example behaviour and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis. The final column indicates how many of the 12 in-depth session transcriptions the behaviour was found within.
 
-The following table outlines the principle different uses of GDP in the data analysed. The next to last column lists example behaviour and notes vignettes or appendieces where the behaviour can be found in situ with more detailed analysis. The final column indicates how many of the 12 in-depth session transcriptions the behaviour was found within.
-
-It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design).
 <!-- Instead the potential of this learning design is of most value.   -->
 
-SUMMARY TABLE HERE -
+INSERT SUMMARY TABLE FROM HERE -
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
 
-ADD IN WHERE IN THE EVIDENCE IS THIS BEHAVIOUR NOTED. Perhaps break down by case study / session analysed.  
 
-### Simple table of uses
 
+It is important to recall the purpose and limitation of these figures outlined in Chapter 4, that this is not designed to claim efficacy of the learning design or to be representative of an average participant (which would require follow up studies of different design).
+
+
+<!--
 | Participants use of Game Design Patterns (GDPs) from thematic analysis of video data                   |                                                                                                  |
 | ------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------ |
 | GDPs can assist project navigation, acting as a framework for code examples and step-by-step tutorials | GDPs can scaffold the ideation processes                                                         |
@@ -849,7 +834,7 @@ ADD IN WHERE IN THE EVIDENCE IS THIS BEHAVIOUR NOTED. Perhaps break down by case
 | GDPs facilitate learners to design for others                                                          | GDP concepts and language used in informal feedback for peers to influence modification of games |
 | GDPs are propagated into the community through playtesting                                             | GDPs facilitate the use of wider funds of knowledge from home and hobby settings                 |
 | GDPs in the personal appropriation of concepts and processes                                           |                                                                                                  |
-PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW.
+PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW. -->
 
 
 
@@ -870,25 +855,20 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 
 
-## Chapter Conclusion
+## Conclusion
 
 <!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
 
-The observations of this chapter show the advantages of GDP as an intermediate, relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
+<!-- **Practical** -->
 
-**Practical**
-The use of GDP concepts can create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners.
-
-GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_  The utility of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants  is shown in part by in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups.
+The observations of this chapter show the advantages of GDP as an intermediate, relatable design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. The use of GDP concepts can create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_  The utility of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants  is shown in part by in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups.
 
 <!-- **Theoretical** -->
-On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. These concepts and this framing of learning as participation in community repertoires, are explored in the next chapter in relation to participant agency using examples that extend beyond the use of GDPs to other cultural processes.
+On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. These concepts and this framing of learning as participation in community repertoires, are explored in the next chapter in relation to participant agency using examples that extend beyond the use of GDPs to other cultural processes. While the development of agency has not been the primary focus of this chapter, the processes of community adaptation of GDP use can be directly linked to conceptions of transformative agency explored in Chapter 4. The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this research.
 
-**Transition to next chapter on agency**
+<!-- **Transition to next chapter on agency** -->
 
-While the development of agency has not been the primary focus of this chapter, the processes of community adaptation of GDP use can be directly linked to Sannino conception of transformative agency through double stimulation (TADS).
 
-The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this design by focusing on a drama process as a lens for analysis.
 
 
 <!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
