--- a/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
@@ -10,8 +10,8 @@
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
             others](#the-role-of-gdps-to-facilitate-learners-to-design-for-others)
-        -   [GDPs facilitate the use of wider funds of knowledge /
-            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-interest)
+        -   [GDPs facilitate the use of wider funds of knowledge and
+            interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
     -   [GDPs used in the process of guided participation (Target
@@ -21,16 +21,10 @@
             navigation, acting as a framework for code examples and
             step-by-step tutorials
             (600)](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials-600)
-        -   [GDPs used to scaffold ideation and organisation processes
-            (800)](#gdps-used-to-scaffold-ideation-and-organisation-processes-800)
-            -   [Knowledge of game design patterns used to stimulate and
-                communicate new
-                ideas](#knowledge-of-game-design-patterns-used-to-stimulate-and-communicate-new-ideas)
-            -   [The use of GDPs to encourage intuitive and visual
-                prototyping](#the-use-of-gdps-to-encourage-intuitive-and-visual-prototyping)
-        -   [GDPs aiding the process of organisation and division of
-            labour
-            (1400)](#gdps-aiding-the-process-of-organisation-and-division-of-labour-1400)
+        -   [GDPs used to scaffold ideation and prioritisation processes
+            (800)](#gdps-used-to-scaffold-ideation-and-prioritisation-processes-800)
+        -   [GDPs aiding the process of division of labour
+            (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
         -   [Discussion on division of labour in the video
             data](#discussion-on-division-of-labour-in-the-video-data)
         -   [The role of GDP used in emerging technical processes
@@ -41,19 +35,14 @@
     -   [Discussion](#discussion)
         -   [Discussion of findings in relation to CHAT conceptions of
             abstraction](#discussion-of-findings-in-relation-to-chat-conceptions-of-abstraction)
-        -   [Discussion of findings in relation to Computational
-            Thinking and
-            abstraction](#discussion-of-findings-in-relation-to-computational-thinking-and-abstraction)
-            -   [Design patterns as a intermediate-level, pedagogical
-                framework compared to computational
-                thinking](#design-patterns-as-a-intermediate-level-pedagogical-framework-compared-to-computational-thinking)
-        -   [Implications and beginnings of suggestions for
-            practitioners to support inclusive pedagogical approach
-            -](#implications-and-beginnings-of-suggestions-for-practitioners-to-support-inclusive-pedagogical-approach--)
-            -   [Table of GDP use with supporting
-                evidence](#table-of-gdp-use-with-supporting-evidence)
-        -   [Simple table of uses](#simple-table-of-uses)
-    -   [Chapter Conclusion](#chapter-conclusion)
+        -   [Design patterns as a intermediate-level, pedagogical
+            framework compared to computational
+            thinking](#design-patterns-as-a-intermediate-level-pedagogical-framework-compared-to-computational-thinking)
+        -   [Implications for
+            practitioners](#implications-for-practitioners)
+            -   [Table of varied GDP use with supporting
+                evidence](#table-of-varied-gdp-use-with-supporting-evidence)
+    -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
             PARTICIPATION](#moved-from-guided-participation)
